--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -6,41 +6,25 @@ on:
       - main  # Trigger deployment when changes are pushed to the 'main' branch
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
+  build:
+    runs-on: [ubuntu-latest]
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build Docker image
-      run: |
-        docker build -t your-dockerhub-username/my-node-app .
-
-    - name: Push Docker image to Docker Hub
-      run: |
-        docker push your-dockerhub-username/my-node-app
-
-    - name: SSH into EC2 and deploy Docker container
-      uses: appleboy/ssh-action@v0.1.6
-      with:
-        host: ${{ secrets.EC2_PUBLIC_IP }}
-        username: ec2-user
-        key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-        script: |
-          # Stop and remove the existing container
-          docker stop my-node-app || true
-          docker rm my-node-app || true
-          # Pull the latest Docker image
-          docker pull your-dockerhub-username/my-node-app
-          # Run the container
-          docker run -d -p 80:3000 --name my-node-app your-dockerhub-username/my-node-app
+      - name: Checkout source
+        uses: actions/checkout@v3
+      - name: Login to docker hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
+      - name: Build docker image
+        run: docker build -t cryptocurrency-tracker-api .
+      - name: Publish image to docker hub
+        run: docker push cryptocurrency-tracker-api:latest
+        
+  deploy:
+    needs: build
+    runs-on: [aws-ec2]
+    steps:
+      - name: Pull image from docker hub
+        run: docker pullcryptocurrency-tracker-api:latest
+      - name: Delete old container
+        run: docker rm -f nodejs-app-container
+      - name: Run docker container
+        run: docker run -d -p 3000:3000 --name nodejs-app-container cryptocurrency-tracker-api 
