--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,4 +1,4 @@
-name: Deploy Node.js App to EC2  Instance
+name: Deploy Node.js App to EC2 Instance
 
 on:
   push:
@@ -7,24 +7,29 @@ on:
 
 jobs:
   build:
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
-      - name: Login to docker hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
-      - name: Build docker image
+      
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      
+      - name: Build Docker image
         run: docker build -t cryptocurrency-tracker-api .
-      - name: Publish image to docker hub
+      
+      - name: Publish image to Docker Hub
         run: docker push cryptocurrency-tracker-api:latest
         
   deploy:
     needs: build
-    runs-on: [aws-ec2]
+    runs-on: ubuntu-latest
     steps:
-      - name: Pull image from docker hub
-        run: docker pullcryptocurrency-tracker-api:latest
-      - name: Delete old container
-        run: docker rm -f nodejs-app-container
-      - name: Run docker container
-        run: docker run -d -p 3000:3000 --name nodejs-app-container cryptocurrency-tracker-api 
+      - name: Pull image from Docker Hub
+        run: docker pull cryptocurrency-tracker-api:latest
+      
+      - name: Delete old container (if exists)
+        run: docker rm -f nodejs-app-container || true
+      
+      - name: Run Docker container
+        run: docker run -d -p 3000:3000 --name nodejs-app-container cryptocurrency-tracker-api
