--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,7 +26,7 @@ jobs:
         
   deploy:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: [aws-ec2]
     steps:
       - name: Pull image from Docker Hub
         run: docker pull mwongess/cryptocurrency-tracker-app:latest
