--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,7 +3,7 @@ name: Deploy Node.js App to EC2 Instance
 on:
   push:
     branches:
-      - main  # Trigger deployment when changes are pushed to the 'main' branch
+      - ec2  
 
 jobs:
   build:
@@ -18,22 +18,23 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       
-      - name: Build Docker image
-        run: docker build -t mwongess/cryptocurrency-tracker-app .
+      - name: Build and push Docker images
+        run: |
+          docker-compose build
+          docker-compose push
       
-      - name: Publish image to Docker Hub
-        run: docker push mwongess/cryptocurrency-tracker-app:latest
-        
   deploy:
     needs: build
     runs-on: self-hosted
     steps:
-      - name: Pull image from Docker Hub
-        run: docker pull mwongess/cryptocurrency-tracker-app:latest
+      - name: Checkout source
+        uses: actions/checkout@v3
       
-      - name: Delete old container (if exists)
-        run: docker rm -f nodejs-app-container || true
+      - name: Pull Docker images
+        run: docker-compose pull
       
-      - name: Run Docker container
-        run: docker run --env-file /home/ubuntu/actions-runner/.env -d -p 3000:3000 --name nodejs-app-container mwongess/cryptocurrency-tracker-app
-        
+      - name: Stop and remove old containers
+        run: docker-compose down
+      
+      - name: Start services with Docker Compose
+        run: docker-compose up -d
