--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   app:
     build: .
@@ -8,6 +7,7 @@ services:
       - MONGO_URI=mongodb://db:27017/crypto-tracker
     depends_on:
       - db
+    container_name: cryptocurrency-tracker-api
 
   db:
     image: mongo
@@ -15,6 +15,7 @@ services:
       - "27017:27017"
     volumes:
       - mongo-data:/data/db
+    container_name: cryptocurrency-tracker-db
 
 volumes:
   mongo-data:
