--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: .
     ports:
       - "3000:3000"
+    env_file:
+      - /home/ubuntu/actions-runner/.env
     environment:
       - MONGO_URI=mongodb://db:27017/crypto-tracker
     depends_on:
