--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -20,8 +20,8 @@ jobs:
       
       - name: Build and push Docker images
         run: |
-          docker-compose build
-          docker-compose push
+          docker compose build
+          docker compose push
       
   deploy:
     needs: build
@@ -31,10 +31,10 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Pull Docker images
-        run: docker-compose pull
+        run: docker compose pull
       
       - name: Stop and remove old containers
-        run: docker-compose down
+        run: docker compose down
       
       - name: Start services with Docker Compose
-        run: docker-compose up -d
+        run: docker compose up -d
