test new configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - "3000:3000"
     env_file:
-      - /home/ubuntu/actions-runner/.env
+      - ./.env
     environment:
       - MONGO_URI=mongodb://db:27017/crypto-tracker
     depends_on:
