--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Build and push Docker images
         run: |
           docker compose build
-          docker compose push
+          docker tag cryptocurrency-tracker-app  mwongess/cryptocurrency-tracker-api:latest
+          docker push mwongess/cryptocurrency-tracker-api
       
   deploy:
     needs: build
@@ -35,7 +36,7 @@ jobs:
           cp /home/ubuntu/actions-runner/.env ./.env
 
       - name: Pull Docker images
-        run: docker compose pull
+        run: docker compose pull mwongess/cryptocurrency-tracker-api:latest
       
       - name: Stop and remove old containers
         run: docker compose down
